[package]
name = "rustpress"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.9"
gray_matter = "0.2"
tera = "1.19"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
axum = "0.7"
axum-extra = "0.9"
tokio = { version = "1.37", features = ["full"] }
hyper = "1.3"
toml = "0.8"
